<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black19191a">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".presentation.home.HomeActivity">

                <ImageView
                    android:id="@+id/image_blur_background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/image_main_vinyl"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/image_main_vinyl"
                    app:layout_constraintTop_toTopOf="@+id/image_main_vinyl"
                    app:srcCompat="@drawable/my" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/image_main_vinyl"
                    app:layout_constraintEnd_toEndOf="@+id/image_main_vinyl"
                    app:srcCompat="@drawable/vinyl" />

                <ImageView
                    android:id="@+id/button_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/image_main_vinyl"
                    app:layout_constraintTop_toTopOf="@+id/image_main_vinyl"
                    app:srcCompat="@drawable/btn" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/black141415"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_blur_background">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/recent_collected_vinly"
                        android:textColor="@color/grayDD"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.vinyla_android.view.widget.VinylView
                        android:id="@+id/image_recent_vinyl1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/image_recent_vinyl2"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView11" />

                    <com.vinyla_android.view.widget.VinylView
                        android:id="@+id/image_recent_vinyl2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        app:layout_constraintBottom_toBottomOf="@+id/image_recent_vinyl1"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/image_recent_vinyl3"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/image_recent_vinyl1"
                        app:layout_constraintTop_toTopOf="@+id/image_recent_vinyl1" />

                    <com.vinyla_android.view.widget.VinylView
                        android:id="@+id/image_recent_vinyl3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        app:layout_constraintBottom_toBottomOf="@+id/image_recent_vinyl2"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/image_recent_vinyl4"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/image_recent_vinyl2"
                        app:layout_constraintTop_toTopOf="@+id/image_recent_vinyl2" />

                    <com.vinyla_android.view.widget.VinylView
                        android:id="@+id/image_recent_vinyl4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/image_recent_vinyl3"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/image_recent_vinyl3"
                        app:layout_constraintTop_toTopOf="@+id/image_recent_vinyl3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_vinyl_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_title"
                        app:layout_constraintEnd_toStartOf="@+id/text_title"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/text_title"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="14dp"
                        android:text="Title WOW"
                        android:textColor="@android:color/white"
                        android:textSize="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView15"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="TextView"
                        android:textColor="@color/gray88"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/text_title"
                        app:layout_constraintStart_toStartOf="@+id/imageView15"
                        app:layout_constraintTop_toBottomOf="@+id/text_title" />

                    <ImageView
                        android:id="@+id/image_vinyl_cover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right_big" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/progress_title"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_vinyl_level"
                    tools:background="@color/mainColor" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="%d/%d"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="@+id/progress_title"
                    app:layout_constraintTop_toBottomOf="@+id/progress_title" />

                <TextView
                    android:id="@+id/text_next_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="Next level Name"
                    android:textColor="@color/gray66"
                    android:textSize="13dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintEnd_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/round_rectangle_8dp"
                    android:backgroundTint="@color/black232324"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button_collection">

                    <TextView
                        android:id="@+id/text_collect_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="127" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/collected_vinyl"
                        android:textColor="@color/grayCC"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_collect_count" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/round_rectangle_8dp"
                    android:backgroundTint="@color/black232324"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

                    <TextView
                        android:id="@+id/text_my_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView12"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="클래식" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/my_genre"
                        android:textColor="@color/grayCC"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_my_genre" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:id="@+id/view4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/button_collection"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button_collection" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/black232324"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toEndOf="@+id/button_collection"
                    app:layout_constraintStart_toStartOf="@+id/button_collection"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

                <View
                    android:id="@+id/button_collection"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/vinyl_main_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/progress_title"
                    app:layout_constraintTop_toBottomOf="@+id/progress_title"
                    app:srcCompat="@drawable/circle_logo_google" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
